<resources>
    <string name="app_name">food fest</string>
    <string name="register">Register</string>
    <string name="skip">skip</string>
    <string name="login">Login</string>
    <string name="food_fest">FOOD FEST</string>
    <string name="upload_image">Upload Image</string>
    <string name="user_name">User name</string>
    <string name="phone">phone</string>
    <string name="e_mail">E-mail</string>
    <string name="password">password</string>
    <string name="Register">register</string>
    <string name="or_with">OR With</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="already_have_account_login">Already have account? Login</string>
    <string name="sing_in">sing in</string>
    <string name="want_to_create_account">want to create account?</string>
    <string name="add_to_card">Add To Card</string>
    <string name="order_place_succeessfully">Order Place Succeessfully..</string>

</resources>