<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/backgroundimg"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#940E0A0A"
        android:gravity="center">

        <LinearLayout
            android:layout_width="330dp"
            android:layout_height="match_parent"
            android:layout_marginStart="40dp"

            android:layout_marginTop="60dp"
            android:layout_marginEnd="40dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="138dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                app:srcCompat="@drawable/foodlogo"
                app:tint="#A19090" />

            <TextView
                android:id="@+id/foodfest"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:fontFamily="cursive"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/food_fest"
                android:textColor="#E4D2D2"
                android:textSize="60sp" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_gradient"
                android:padding="8dp"
                android:text="@string/login"
                android:textStyle="bold" />

            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_gradient"
                android:padding="8dp"
                android:text="@string/register"
                android:textStyle="bold"
                 />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/skip"
                android:textColor="#ffff"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>