<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimg"
    tools:context=".sing_in">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#940E0A0A">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="15dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="138dp"
                    android:layout_marginTop="20dp"
                    android:padding="8dp"
                    app:srcCompat="@drawable/foodlogo"
                    app:tint="#A19090" />

                <TextView
                    android:id="@+id/foodfest"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="50dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/food_fest"
                    android:textColor="#E4D2D2"
                    android:textSize="60sp" />


                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:background="#86E0F3FF"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/e_mail"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColorHint="#050505"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:autofillHints="******"
                    android:background="#85E0F3FF"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:textColorHint="#050505"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/singin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/btn_gradient"
                    android:text="@string/sing_in"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <View
                        android:id="@+id/view2"
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="5dp"
                        android:background="@color/material_dynamic_neutral70" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/or_with"
                        android:textColor="#ffff"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/view3"
                        android:layout_width="50dp"
                        android:layout_height="2dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:background="@color/material_dynamic_neutral70" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="89dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/fdbackground"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/facebook"
                        android:textColor="#faf7f7"
                        app:drawableLeftCompat="@drawable/facebook" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/googlebackground"
                        android:gravity="center"
                        android:padding="10dp"
                        android:text="@string/google"
                        android:textColor="#faf7f7"
                        app:drawableLeftCompat="@drawable/google" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/want_to_create_account"
                    android:textColor="#ffff"
                    android:textStyle="bold" />

            </LinearLayout>



        </ScrollView>

    </LinearLayout>


</LinearLayout>